--- a/TimeTracker/TimeTracker.Server/appsettings.json
+++ b/TimeTracker/TimeTracker.Server/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Blazor;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-TimeTracker-9140F4BE-2217-42A8-A786-5FA09577E1B4;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
