Dodan prikaz pie charta s informacijama o duljini aktivnosti.

--- a/TimeTracker/TimeTracker.Client/TimeTracker.Client.csproj
+++ b/TimeTracker/TimeTracker.Client/TimeTracker.Client.csproj
@@ -76,4 +76,8 @@
     <Content Remove="Pages\ActivityList.cshtml" />
   </ItemGroup>
 
+  <ItemGroup>
+    <BlazorGenerate Remove="Pages\ChartComponent.cshtml" />
+  </ItemGroup>
+
 </Project>
