Omogućeno ručno dodavanje aktivnosti i prikaz pie charta po ukupnom trajanju aktivnosti u labelama

--- a/TimeTracker/TimeTracker.Client/TimeTracker.Client.csproj
+++ b/TimeTracker/TimeTracker.Client/TimeTracker.Client.csproj
@@ -83,4 +83,8 @@
     <BlazorGenerate Remove="Pages\ChartComponent.cshtml" />
   </ItemGroup>
 
+  <ItemGroup>
+    <BlazorGenerate Remove="Pages\AddActivityManual.cshtml" />
+  </ItemGroup>
+
 </Project>
